[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["challenges"]

[project]
name = "coding-challenges"
version = "0.0.1"
description = "Python coding challenges"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Joseph Nagel", email = "JosephBNagel@gmail.com"}
]
keywords = ["coding challenges", "Python exercises"]
dependencies = [
    "numpy"
]

[project.optional-dependencies]
testing = [
    "pytest",
    "mypy"
]

[project.urls]
source = "https://github.com/joseph-nagel/coding-challenges"

